--- a/app/index.html
+++ b/app/index.html
@@ -56,6 +56,7 @@
   </header>
 
   <main class="main">
+
     <section class="top-slider">
       <div class="container top-slider__container">
         <div class="top-slider__inner">
@@ -110,6 +111,7 @@
         </div>
       </div>
     </section>
+
     <section class="categories-info">
       <div class="categories-info__inner">
         <div class="container">
@@ -184,6 +186,7 @@
         </div>
       </div>
     </section>
+
     <section class="video-fashin">
       <div class="container">
         <div class="video-fashin__inner">
@@ -239,11 +242,21 @@
                 </a>
               </div>
             </div>
-            <div class="star" data-rateyo-rating="4"></div>
-            <h4 class="product-item__title">White Polo Men’s T-Shirt</h4>
-            <div class="product-item__price">
-              <div class="product-item__new-price">$34.00</div>
-              <div class="product-item__old-price">$27.00</div>
+            <div class="product-item__wrapper-box">
+              <div class="product-item__box">
+                <div class="star" data-rateyo-rating="4"></div>
+                <h4 class="product-item__title">White Polo Men’s T-Shirt</h4>
+                <div class="product-item__price">
+                  <div class="product-item__new-price">$34.00</div>
+                  <div class="product-item__old-price">$27.00</div>
+                </div>
+              </div>
+              <div class="product-item__content-box">
+                <p class="product-item__text">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui animi ut voluptate veritatis, quibusdam fugit, architecto numquam enim facere consequuntur, quidem beatae eligendi aliqua
+                </p>
+                <button class="product-item__btn">Add to cart</button>
+              </div>
             </div>
           </div>
           <div class="product-item product-item--sale">
@@ -270,11 +283,21 @@
                 </a>
               </div>
             </div>
-            <div class="star" data-rateyo-rating="4.5"></div>
-            <h4 class="product-item__title">White Polo Men’s T-Shirt</h4>
-            <div class="product-item__price">
-              <div class="product-item__new-price">$34.00</div>
-              <div class="product-item__old-price">$27.00</div>
+            <div class="product-item__wrapper-box">
+              <div class="product-item__box">
+                <div class="star" data-rateyo-rating="4"></div>
+                <h4 class="product-item__title">White Polo Men’s T-Shirt</h4>
+                <div class="product-item__price">
+                  <div class="product-item__new-price">$34.00</div>
+                  <div class="product-item__old-price">$27.00</div>
+                </div>
+              </div>
+              <div class="product-item__content-box">
+                <p class="product-item__text">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui animi ut voluptate veritatis, quibusdam fugit, architecto numquam enim facere consequuntur, quidem beatae eligendi aliqua
+                </p>
+                <button class="product-item__btn">Add to cart</button>
+              </div>
             </div>
           </div>
           <div class="product-item">
@@ -301,11 +324,21 @@
                 </a>
               </div>
             </div>
-            <div class="star" data-rateyo-rating="5"></div>
-            <h4 class="product-item__title">White Polo Men’s T-Shirt</h4>
-            <div class="product-item__price">
-              <div class="product-item__new-price">$34.00</div>
-              <div class="product-item__old-price">$27.00</div>
+            <div class="product-item__wrapper-box">
+              <div class="product-item__box">
+                <div class="star" data-rateyo-rating="4"></div>
+                <h4 class="product-item__title">White Polo Men’s T-Shirt</h4>
+                <div class="product-item__price">
+                  <div class="product-item__new-price">$34.00</div>
+                  <div class="product-item__old-price">$27.00</div>
+                </div>
+              </div>
+              <div class="product-item__content-box">
+                <p class="product-item__text">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui animi ut voluptate veritatis, quibusdam fugit, architecto numquam enim facere consequuntur, quidem beatae eligendi aliqua
+                </p>
+                <button class="product-item__btn">Add to cart</button>
+              </div>
             </div>
           </div>
           <div class="product-item product-item--sale">
@@ -332,11 +365,21 @@
                 </a>
               </div>
             </div>
-            <div class="star" data-rateyo-rating="4"></div>
-            <h4 class="product-item__title">White Polo Men’s T-Shirt</h4>
-            <div class="product-item__price">
-              <div class="product-item__new-price">$34.00</div>
-              <div class="product-item__old-price">$27.00</div>
+            <div class="product-item__wrapper-box">
+              <div class="product-item__box">
+                <div class="star" data-rateyo-rating="4"></div>
+                <h4 class="product-item__title">White Polo Men’s T-Shirt</h4>
+                <div class="product-item__price">
+                  <div class="product-item__new-price">$34.00</div>
+                  <div class="product-item__old-price">$27.00</div>
+                </div>
+              </div>
+              <div class="product-item__content-box">
+                <p class="product-item__text">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui animi ut voluptate veritatis, quibusdam fugit, architecto numquam enim facere consequuntur, quidem beatae eligendi aliqua
+                </p>
+                <button class="product-item__btn">Add to cart</button>
+              </div>
             </div>
           </div>
           <div class="product-item">
@@ -363,11 +406,21 @@
                 </a>
               </div>
             </div>
-            <div class="star" data-rateyo-rating="5"></div>
-            <h4 class="product-item__title">White Polo Men’s T-Shirt</h4>
-            <div class="product-item__price">
-              <div class="product-item__new-price">$34.00</div>
-              <div class="product-item__old-price">$27.00</div>
+            <div class="product-item__wrapper-box">
+              <div class="product-item__box">
+                <div class="star" data-rateyo-rating="4"></div>
+                <h4 class="product-item__title">White Polo Men’s T-Shirt</h4>
+                <div class="product-item__price">
+                  <div class="product-item__new-price">$34.00</div>
+                  <div class="product-item__old-price">$27.00</div>
+                </div>
+              </div>
+              <div class="product-item__content-box">
+                <p class="product-item__text">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui animi ut voluptate veritatis, quibusdam fugit, architecto numquam enim facere consequuntur, quidem beatae eligendi aliqua
+                </p>
+                <button class="product-item__btn">Add to cart</button>
+              </div>
             </div>
           </div>
           <div class="product-item product-item--sale">
@@ -394,17 +447,29 @@
                 </a>
               </div>
             </div>
-            <div class="star" data-rateyo-rating="4.5"></div>
-            <h4 class="product-item__title">White Polo Men’s T-Shirt</h4>
-            <div class="product-item__price">
-              <div class="product-item__new-price">$34.00</div>
-              <div class="product-item__old-price">$27.00</div>
+            <div class="product-item__wrapper-box">
+              <div class="product-item__box">
+                <div class="star" data-rateyo-rating="4"></div>
+                <h4 class="product-item__title">White Polo Men’s T-Shirt</h4>
+                <div class="product-item__price">
+                  <div class="product-item__new-price">$34.00</div>
+                  <div class="product-item__old-price">$27.00</div>
+                </div>
+              </div>
+              <div class="product-item__content-box">
+                <p class="product-item__text">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui animi ut voluptate veritatis, quibusdam fugit, architecto numquam enim facere consequuntur, quidem beatae eligendi aliqua
+                </p>
+                <button class="product-item__btn">Add to cart</button>
+              </div>
             </div>
           </div>
+          
         </div>
         <a class="product__link" href="#">LOAD MORE</a>
       </div>
     </section>
+
     <div class="promo">
       <div class="container">
         <div class="promo__inner">
@@ -432,6 +497,7 @@
         </div>
       </div>
     </div>
+
     <div class="portners">
       <div class="container">
         <ul class="portners__list">
@@ -456,6 +522,74 @@
         </ul>
       </div>
     </div>
+    
+    <section class="blog">
+      <div class="container">
+        <h3 class="title">From Our Blog</h3>
+        <p class="text">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmodmoe tempor incididunt ut labore et
+          dolore aliqua.
+        </p>
+        <div class="blog__items">
+
+          <div class="blog__item">
+            <a class="blog__item-imglink" href="#">
+              <img class="blog__item-img" src="images/blog/1.jpg" alt="blog img">
+            </a>
+            <div class="blog__item-box">
+              <div class="blog__item-info">
+                <a class="blog__item-autor" href="#">By Admin</a>
+                <div class="blog__item-data">10 January, 2020</div>
+              </div>
+              <a class="blog__item-titlelink" href="#">
+                <h4 class="blog__item-title">
+                  Our Apps User Use Mobile On His Mobile
+                </h4>
+              </a>
+              <a class="blog__item-link" href="#">Read More</a>
+            </div>
+          </div>
+
+          <div class="blog__item">
+            <a class="blog__item-imglink" href="#">
+              <img class="blog__item-img" src="images/blog/2.jpg" alt="blog img">
+            </a>
+            <div class="blog__item-box">
+              <div class="blog__item-info">
+                <a class="blog__item-autor" href="#">By Admin</a>
+                <div class="blog__item-data">10 January, 2020</div>
+              </div>
+              <a class="blog__item-titlelink" href="#">
+                <h4 class="blog__item-title">
+                  Our Apps User Use Mobile On His Mobile
+                </h4>
+              </a>
+              <a class="blog__item-link" href="#">Read More</a>
+            </div>
+          </div>
+
+          <div class="blog__item">
+            <a class="blog__item-imglink" href="#">
+              <img class="blog__item-img" src="images/blog/3.jpg" alt="blog img">
+            </a>
+            <div class="blog__item-box">
+              <div class="blog__item-info">
+                <a class="blog__item-autor" href="#">By Admin</a>
+                <div class="blog__item-data">10 January, 2020</div>
+              </div>
+              <a class="blog__item-titlelink" href="#">
+                <h4 class="blog__item-title">
+                  Our Apps User Use Mobile On His Mobile
+                </h4>
+              </a>
+              <a class="blog__item-link" href="#">Read More</a>
+            </div>
+          </div>
+
+        </div>
+      </div>
+    </section>
+
   </main>
 
   <footer class="footer">
